--- a/src/components/forms/Contact.astro
+++ b/src/components/forms/Contact.astro
@@ -117,13 +117,13 @@ const formBackground = 'light';
         createChat({
             webhookUrl: 'https://jmfortiz.jasodev.es/webhook/b50c3709-d2a6-4e0f-8bb9-72ba69e56438/chat',
             target: '#n8n-chat',
-            initialMessages: ['Administrador virtual JMF Ortiz a tu servicio.'],
+            initialMessages: ['JMF Ortiz a tu servicio.'],
             mode: 'fullscreen',
             i18n: {
                 //@ts-ignore
                 en: {
                     title: '',
-                    subtitle: "Administrador virtual JMF Ortiz",
+                    subtitle: "En qué puedo ayudarte y yo enviaré tu consulta al equipo adecuado.",
                     footer: '',
                     getStarted: 'New Conversation',
                     inputPlaceholder: 'Escribe tu consulta..',
