--- a/src/components/forms/Contact.astro
+++ b/src/components/forms/Contact.astro
@@ -1,25 +1,25 @@
 ---
-import Button from "@components/ui/Button.astro";
-import Input from "@components/ui/form/Input.astro";
-import Textarea from "@components/ui/form/Textarea.astro";
-import Radio from "@components/ui/form/Radio.astro";
-import Checkbox from "@components/ui/form/Checkbox.astro";
+// import Button from "@components/ui/Button.astro";
+// import Input from "@components/ui/form/Input.astro";
+// import Textarea from "@components/ui/form/Textarea.astro";
+// import Radio from "@components/ui/form/Radio.astro";
+// import Checkbox from "@components/ui/form/Checkbox.astro";
 
-const hearAboutOptions = [
-    { label: "Presupuesto", value: "Presupuesto" },
-    { label: "Administración", value: "Administración" },
-    { label: "Contabilidad", value: "Contabilidad" },
-    { label: "Seguros", value: "Seguros" }
-];
+// const hearAboutOptions = [
+//     { label: "Presupuesto", value: "Presupuesto" },
+//     { label: "Administración", value: "Administración" },
+//     { label: "Contabilidad", value: "Contabilidad" },
+//     { label: "Seguros", value: "Seguros" }
+// ];
 
-const interestOptions = [
-    { label: "Documentos", value: "documents" },
-    { label: "Certificados", value: "certificates" },
-    { label: "Gestión de Accesos", value: "access" },
-    { label: "Otros", value: "others" }
-];
+// const interestOptions = [
+//     { label: "Documentos", value: "documents" },
+//     { label: "Certificados", value: "certificates" },
+//     { label: "Gestión de Accesos", value: "access" },
+//     { label: "Otros", value: "others" }
+// ];
 
-const formBackground = 'light';
+// const formBackground = 'light';
 ---
 
 <!-- <form id="contact-form" class="space-y-6 bg-white p-6 rounded-lg">
