--- a/src/components/forms/Contact.astro
+++ b/src/components/forms/Contact.astro
@@ -123,7 +123,7 @@
                 //@ts-ignore
                 en: {
                     title: '',
-                    subtitle: "Cuentame, Yo enviaré tu consulta al equipo adecuado.",
+                    subtitle: "Cuentame, enviaré tu consulta al equipo adecuado.",
                     footer: '',
                     getStarted: 'New Conversation',
                     inputPlaceholder: 'Escribe tu consulta..',
