--- a/src/components/forms/DashboardForm.astro
+++ b/src/components/forms/DashboardForm.astro
@@ -59,24 +59,6 @@
         />
       </div>
 
-      <!-- Comunidad -->
-    <div>
-        <label for="comunidad" class="block text-sm font-medium text-gray-700 mb-2">
-            Comunidad
-        </label>
-        <select
-            id="comunidad"
-            name="comunidad"
-            required
-            class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition"
-        >
-            <option value="">Selecciona una comunidad</option>
-        </select>
-        <button type="button" id="loadAsistentes" class="hidden mt-2 text-sm text-blue-600 hover:underline">
-            Abrir lista de asistentes
-        </button>
-    </div>
-
       <div>
         <label for="placeJunta" class="block text-sm font-medium text-gray-700 mb-2">
           Lugar de la reunión
@@ -91,19 +73,34 @@
         />
       </div>
 
-    <div>
-        <label for="nombrePresidente" class="block text-sm font-medium text-gray-700 mb-2">
-          Nombre del Presidente
-        </label>
-        <input
-          type="text"
-          id="nombrePresidente"
-          name="nombrePresidente"
-          required
-          placeholder="Nombre del presidente de la comunidad"
-          class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition"
-        />
-    </div>
+      <div class="flex flex-col">
+        <div class="flex justify-between">
+            <label for="administrador" class="text-sm font-medium text-gray-700 mb-2">
+              Administrador
+            </label>
+            <label for="numColegiado" class="text-sm font-medium text-gray-700 mb-2">
+              Número de colegiado
+            </label>
+        </div>
+        <div class="flex gap-4">
+            <input
+              type="text"
+              id="administrador"
+              name="administrador"
+              required
+              placeholder="Nombre del administrador"
+              class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition"
+            />
+            <input
+              type="text"
+              id="numColegiado"
+              name="numColegiado"
+              required
+              placeholder="Número de colegiado"
+              class="w-36 px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition"
+            />
+        </div>
+      </div>
 
       <!-- Audio -->
       <div>
@@ -121,19 +118,54 @@
       </div>
 
       <!-- Orden del día -->
-      <div>
+      <div id="ordenDiv">
         <label for="ordenDia" class="block text-sm font-medium text-gray-700 mb-2">
           Orden del día
         </label>
-        <textarea
+        <input
           id="ordenDia"
           name="ordenDia"
-          rows="6"
-          required
-          placeholder="Describe los temas a tratar en la reunión"
-          class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition resize-vertical"
-        ></textarea>
+          placeholder="Punto a tratar en la reunión"
+          class="orden w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition resize-vertical"
+        />
+        <button class="text-sm border-2 border-green-500 px-4 py-1 rounded-xl mt-2 text-green-700 hover:bg-green-100 hover:border-green-600 transition"
+                type="button"
+                id="addOrdenDia">
+            Añadir
+        </button>
       </div>
+
+        <!-- Comunidad -->
+    <div>
+        <label for="comunidad" class="block text-sm font-medium text-gray-700 mb-2">
+            Comunidad
+        </label>
+        <select
+            id="comunidad"
+            name="comunidad"
+            required
+            class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition"
+        >
+            <option value="">Selecciona una comunidad</option>
+        </select>
+        <button type="button" id="loadAsistentes" class="hidden mt-2 text-sm text-blue-600 hover:underline">
+            Abrir lista de asistentes
+        </button>
+    </div>
+
+    <div class="disabled">
+        <label for="nombrePresidente" class="block text-sm font-medium text-gray-700 mb-2">
+          Presidente de la comunidad
+        </label>
+        <select
+            id="nombrePresidente"
+            name="nombrePresidente"
+            required
+            class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition"
+        >
+            <option value="">Selecciona</option>
+        </select>
+    </div>
 
       <!-- Botones -->
       <div class="flex gap-4 pt-4">
@@ -186,14 +218,7 @@
         </button>
     </div>
 </div>
-<table border="1" cellpadding="2" cellspacing="0" class="bg-white">
-        <thead>
-            <th style="font-size: 12px;min-width: 100px; max-width: 500px;">Propietario</th>
-            <th style="font-size: 12px;min-width: 30px; max-width: 50px;">Piso</th>
-            <th style="font-size: 12px;min-width: 30px; max-width: 120px;">Coeficiente</th>
-            <th style="font-size: 12px;min-width: 100px; max-width: 500px;">Representado Por</th>
-        </thead>
-</table>
+
 <script>
     const token = localStorage.getItem('rpg_auth_token');
     if(!token) {
@@ -206,10 +231,28 @@
     const select = document.getElementById('comunidad') as HTMLSelectElement;
     const saveAsistentesBtn = document.getElementById('saveAsistentes') as HTMLButtonElement;
     const loadAsistentesBtn = document.getElementById('loadAsistentes') as HTMLButtonElement;
+    const addOrdenDiaBtn = document.getElementById('addOrdenDia') as HTMLButtonElement;
+    const ordenDiv = document.getElementById('ordenDiv') as HTMLDivElement;
     let comunidad = {};
+    let direccionComunidad = '';
+    //@ts-ignore
+    let pisos = [];
     //@ts-ignore
     let asistentes = [];
     const formComunidad = document.getElementById('formComunidad') as HTMLDialogElement;
+
+    addOrdenDiaBtn.addEventListener('click', () => {
+        const ordenInput = document.getElementById('ordenDia') as HTMLInputElement;
+        const nuevoPunto = ordenInput.value.trim();
+        if(nuevoPunto !== '') {
+            const nuevoElemento = document.createElement('p');
+            nuevoElemento.textContent = `• ${nuevoPunto}`;
+            nuevoElemento.className = 'text-gray-800 mb-1 puntos-orden';
+            ordenDiv.appendChild(nuevoElemento);
+            ordenInput.value = '';
+        }
+    });
+
     //@ts-ignore
     comunidades.forEach((comunidad) => {
         const option = document.createElement('option');
@@ -218,6 +261,7 @@
         //@ts-ignore
         select.appendChild(option);
     });
+
     loadAsistentesBtn.addEventListener('click', () => {
         formComunidad.classList.remove('hidden');
     });
@@ -270,7 +314,7 @@
                     piso: comunidad.comunidades[0][input.dataset.propietarioIndex!].piso,
                     //@ts-ignore
                     coeficiente: comunidad.comunidades[0][input.dataset.propietarioIndex!].coeficiente,
-                    representanteVecino: null,
+                    representanteVecino: input.value.trim(),
                     representanteOtros: input.value.trim(),
                     //@ts-ignore
                     pisoAsiste: pisoAsiste[input.dataset.propietarioIndex!].value
@@ -286,13 +330,29 @@
     select.addEventListener('change', async function(event) {
         //@ts-ignore
         const comunidadSeleccionada = event.target.value;
+        direccionComunidad = select.options[select.selectedIndex].text
         //@ts-ignore
         const textoSeleccionado = event.target.options[event.target.selectedIndex].text;
 
         comunidad = await fetchComunidad(comunidadSeleccionada);
         construirTabla(comunidad);
         formComunidad.classList.remove('hidden');
+        cargarPresidentes();
     });
+
+    const nombrePresidenteSelect = document.getElementById('nombrePresidente') as HTMLSelectElement;
+    function cargarPresidentes() {
+            if(pisos.length > 0) {
+                nombrePresidenteSelect.innerHTML = '<option value="">Selecciona</option>';
+                //@ts-ignore
+                pisos.forEach(propietario => {
+                    const option = document.createElement('option');
+                    option.value = propietario.piso +  '/' + propietario.propietario
+                    option.textContent = propietario.piso +  ' - ' + propietario.propietario
+                    nombrePresidenteSelect.appendChild(option);
+                });
+            }
+        }
 
     //@ts-ignore
     async function fetchComunidad(numero) {
@@ -380,16 +440,14 @@ const cuerpoTabla = document.getElementById('cuerpo-tabla') as HTMLTableSectionE
     cuerpoTabla.innerHTML = '';
 
     //@ts-ignore
-    const pisos = comunidadData.map(item => ({
+    pisos = comunidadData.map(item => ({
       piso: item.piso,
       propietario: item.propietario
     }));
-    console.log(comunidadData.length)
     //@ts-ignore
     comunidadData.forEach((propietario, index) => {
       const fila = document.createElement('tr');
       fila.className = 'hover:bg-gray-50 border-b';
-
       // Calcular coeficiente porcentual (asumiendo que el total es 100000 o similar)
       // Ajusta este cálculo según tu lógica de negocio
       const coeficientePorcentual = ((propietario.coeficiente / 100000) * 100).toFixed(3) + '%';
@@ -437,9 +495,20 @@ const cuerpoTabla = document.getElementById('cuerpo-tabla') as HTMLTableSectionE
     const [anno, mesNumero, dia] = fechaForm.split('-');
     const mes = convertirMes(mesNumero);
     const tablaAsistentes = asistentesArray(asistentes);
+    const puntosOrdenDiaElements = document.querySelectorAll('.puntos-orden') as NodeListOf<HTMLParagraphElement>;
+    let puntosOrdenDiaHtml = '';
+    const numeroAsistentes = asistentes.length;
+      //@ts-ignore
+    const CalculonumeroTotalCoeficientes = asistentes.reduce((total, asistente) => total + parseFloat(asistente.coeficiente), 0);
+    const numeroTotalCoeficientes = (CalculonumeroTotalCoeficientes/1000).toFixed(3);
+    puntosOrdenDiaElements.forEach((element, index) => {
+        puntosOrdenDiaHtml += `<p><strong>${index+1}.</strong> ${element.textContent}</p>`;
+    });
+    const [piso, presidente] = formData.get('nombrePresidente').split('/');
+
     const htmlContent = `
       <!DOCTYPE html>
-      <html>
+      <html lang="es">
         <head>
           <style>
             body { font-family: Arial, sans-serif; line-height: 1.6; }
@@ -447,14 +516,42 @@ const cuerpoTabla = document.getElementById('cuerpo-tabla') as HTMLTableSectionE
         </head>
         <body>
             <p>
-                <u>ACTA Nº <strong>${formData.get('numActa')}</strong></u> CORRESPONDIENTE A LA JUNTA GENERAL ORDINARIA CELEBRADA POR LA COMUNIDAD DE PROPIETARIOS ${formData.get('comunidad')}, EL DÍA ${dia} DE ${mes} DE ${anno} EN EL ${formData.get('placeJunta')}.
+                <u>ACTA Nº <strong>${formData.get('numActa')}</strong></u> CORRESPONDIENTE A LA JUNTA GENERAL ORDINARIA CELEBRADA POR LA COMUNIDAD DE PROPIETARIOS ${direccionComunidad}, EL DÍA ${dia} DE ${mes} DE ${anno} EN EL ${formData.get('placeJunta')}.
             </p>
             <h4>ASISTENTES:</h4>
             <div style="margin-top: 10px; margin-bottom: 20px;">
                 ${tablaAsistentes}
             </div>
+            <p><strong>Número de asistentes:</strong> ${numeroAsistentes} propietarios o representantes.</p>
+            <p><strong>Número total de coeficientes representados:</strong> ${numeroTotalCoeficientes} %.</p>
+            <p></p>
             <p>
-                En Torrejón de Ardoz, a ${dia} de ${mes} de ${anno}, siendo las ${formData.get('HoraInicio')} horas y en segunda convocatoria, se reúne la Junta de Propietarios de la ${formData.get('comunidad')} de Torrejón de Ardoz, con la asistencia de los copropietarios que arriba se reseñan, pasándose a continuación a tratar los puntos expuestos en el Orden del Día, de acuerdo a la convocatoria que en el plazo legal se había hecho llegar en tiempo y forma a todos los interesados, como así lo ratifican los asistentes.
+                En Torrejón de Ardoz, a ${dia} de ${mes} de ${anno}, siendo las ${formData.get('HoraInicio')} horas y en segunda convocatoria, se reúne la Junta de Propietarios de la ${direccionComunidad} de Torrejón de Ardoz, con la asistencia de los copropietarios que arriba se reseñan, pasándose a continuación a tratar los puntos expuestos en el Orden del Día, de acuerdo a la convocatoria que en el plazo legal se había hecho llegar en tiempo y forma a todos los interesados, como así lo ratifican los asistentes.
+            </p>
+            <p></p>
+            <h4 style="text-align: center;">ORDEN DEL DÍA:</h4>
+            <div style="margin-top: 10px; margin-bottom: 20px;">
+                ${puntosOrdenDiaHtml}
+            </div>
+            <p></p>
+            <p>
+                Y sin más comentarios, se levantó la sesión a las ${formData.get('HoraFin')} horas, extendiéndose la presente acta, de la que yo, Administrador-Secretario, doy fe (s.e.u.o.).
+            </p>
+            <p></p>
+            <p></p>
+            <div>
+                <span><strong>El Administrador-Secretario                                                           El Presidente</strong></span>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <span><strong>Fdo.: Por Admon.J.M.F.Ortiz, S.L.</strong></span>
+                <span><strong>${formData.get('administrador')}                                    ${presidente}</strong></span>
+                <span><strong>${formData.get('numColegiado')}                                                              ${piso}</strong></span>
+            </div>
+            <p></p>
+            <p style="font-size: 12px;">
+                <strong><u>DILIGENCIA:</u></strong> Para hacer constar que esta acta, cuya original figura en el libro de Actas de la Comunidad, ha sido redactada y cerrada cumpliendo todos los requisitos legales, en cuanto a tiempo y forma, establecidos en la Ley de Propiedad Horizontal, repartiéndose en el buzón de los propietarios residentes y enviándose a la dirección que consta a la Comunidad a los no residentes en la misma.
             </p>
         </body>
       </html>
