--- a/src/pages/dashboard/index.astro
+++ b/src/pages/dashboard/index.astro
@@ -3,11 +3,11 @@ import Layout from '../../layouts/Layout.astro';
 import InnerHero from '../../components/sections/InnerHero.astro';
 import DashboardForm from '@components/forms/DashboardForm.astro';
 
-const seoTitle = "Login | JMF Ortiz";
+const seoTitle = "Actas | JMF Ortiz";
 const seoDescription = "Servicios de la administración de fincas en Torrejón de Ardoz con más de 40 años de experiencia. Presupuesto gratuito y sin compromiso.";
 
 const heroContent = {
-    title: "Login",
+    title: "Actas",
     description: "Comunidades de vecinos",
 }
 ---
