--- a/src/components/forms/DashboardForm.astro
+++ b/src/components/forms/DashboardForm.astro
@@ -529,7 +529,7 @@ const cuerpoTabla = document.getElementById('cuerpo-tabla') as HTMLTableSectionE
                 En Torrejón de Ardoz, a ${dia} de ${mes} de ${anno}, siendo las ${formData.get('HoraInicio')} horas y en segunda convocatoria, se reúne la Junta de Propietarios de la ${direccionComunidad} de Torrejón de Ardoz, con la asistencia de los copropietarios que arriba se reseñan, pasándose a continuación a tratar los puntos expuestos en el Orden del Día, de acuerdo a la convocatoria que en el plazo legal se había hecho llegar en tiempo y forma a todos los interesados, como así lo ratifican los asistentes.
             </p>
             <p></p>
-            <h4 style="text-align: center;">ORDEN DEL DÍA:</h4>
+            <h4 style="text-align: center;"><strong><u>ORDEN DEL DÍA:</u></strong></h4>
             <div style="margin-top: 10px; margin-bottom: 20px;">
                 ${puntosOrdenDiaHtml}
             </div>
@@ -547,7 +547,7 @@ const cuerpoTabla = document.getElementById('cuerpo-tabla') as HTMLTableSectionE
                 <p></p>
                 <span><strong>Fdo.: Por Admon.J.M.F.Ortiz, S.L.</strong></span>
                 <span><strong>${formData.get('administrador')}                                    ${presidente}</strong></span>
-                <span><strong>${formData.get('numColegiado')}                                                              ${piso}</strong></span>
+                <span><strong>${formData.get('numColegiado')}                                                                       ${piso}</strong></span>
             </div>
             <p></p>
             <p style="font-size: 12px;">
