--- a/src/components/forms/DashboardForm.astro
+++ b/src/components/forms/DashboardForm.astro
@@ -420,6 +420,7 @@
 
         // Limpiar el formulario
         reunionForm.reset();
+        window.location.reload()
         } catch (error) {
         console.error('Error al registrar la reunión:', error);
         alert('Hubo un error al registrar la reunión. Por favor, inténtalo de nuevo.');
