--- a/src/components/forms/DashboardForm.astro
+++ b/src/components/forms/DashboardForm.astro
@@ -120,6 +120,21 @@
         </button>
       </div>
 
+      <!---  Audio   -->
+
+      <div class="mt-4">
+        <label for="audioFile" class="block text-sm font-medium text-gray-700 mb-2">
+        Archivo de audio
+        </label>
+        <input
+        type="file"
+        id="audioFile"
+        name="audioFile"
+        accept="audio/*"
+        class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition"
+        />
+    </div>
+
         <!-- Comunidad -->
     <div>
         <label for="comunidad" class="block text-sm font-medium text-gray-700 mb-2">
@@ -218,6 +233,8 @@
     const loadAsistentesBtn = document.getElementById('loadAsistentes') as HTMLButtonElement;
     const addOrdenDiaBtn = document.getElementById('addOrdenDia') as HTMLButtonElement;
     const ordenDiv = document.getElementById('ordenDiv') as HTMLDivElement;
+    const audioFile = document.querySelector('#audioFile') as HTMLInputElement
+
     let comunidad = {};
     let direccionComunidad = '';
     let puntosOrdenDiaElements = document.querySelectorAll('.puntos-orden') as NodeListOf<HTMLParagraphElement>;
@@ -367,6 +384,9 @@
         e.preventDefault();
 
         const formData = new FormData(reunionForm);
+        const audioData = new FormData();
+        console.log(audioFile.files)
+        audioData.append('audioFile', audioFile.files![0]);
         puntosOrdenDiaElements = document.querySelectorAll('.puntos-orden') as NodeListOf<HTMLParagraphElement>;
         //@ts-ignore
         formData.append('asistentesJson', JSON.stringify(asistentes));
@@ -376,12 +396,21 @@
         puntosOrdenDiaElements.forEach((element, index) => {
             puntosOrdenDiaArray.push({index:index+1,text:element.textContent});
         });
+
+        try{
+            const response = await fetch('https://jmfortiz.jasodev.es/webhook/f1bf71db-5673-4971-b906-5c933e42b849', {
+                method: 'POST',
+                body: formData
+            });
+
+        const result = await response.json();
+        console.log(result);
+        }
+        catch(error){
+            console.log(error);
+        }
+
         try {
-        // Simular envío de datos al servidor
-        //const response = await fetch('/api/generar-docx', {
-        //    method: 'POST',
-        //    body: JSON.stringify({ html: htmlContent }),
-        //});
         //@ts-ignore
         formDataObj['comunidad'] = direccionComunidad;
         const response = await fetch('/api/html-docx', {
