--- a/src/components/forms/DashboardForm.astro
+++ b/src/components/forms/DashboardForm.astro
@@ -217,6 +217,7 @@
             Guardar Asistentes
         </button>
     </div>
+    <h1 class="hidden text-2xl text-green-600 animate-pulse load">Generando acta</h1>
 </div>
 
 <script>
@@ -233,7 +234,10 @@
     const loadAsistentesBtn = document.getElementById('loadAsistentes') as HTMLButtonElement;
     const addOrdenDiaBtn = document.getElementById('addOrdenDia') as HTMLButtonElement;
     const ordenDiv = document.getElementById('ordenDiv') as HTMLDivElement;
-    const audioFile = document.querySelector('#audioFile') as HTMLInputElement
+    const archivo = document.querySelector('#audioFile') as HTMLInputElement
+    const urlDoc= 'https://docs.google.com/document/d/1ZNGGVloCXuRi_1G7wpycV-VVzRNMX4EWTL0z6E_FcQ8/edit?hl=es&tab=t.0'
+    const loading = document.querySelector('.load') as HTMLElement;
+
 
     let comunidad = {};
     let direccionComunidad = '';
@@ -384,9 +388,6 @@
         e.preventDefault();
 
         const formData = new FormData(reunionForm);
-        const audioData = new FormData();
-        console.log(audioFile.files)
-        audioData.append('audioFile', audioFile.files![0]);
         puntosOrdenDiaElements = document.querySelectorAll('.puntos-orden') as NodeListOf<HTMLParagraphElement>;
         //@ts-ignore
         formData.append('asistentesJson', JSON.stringify(asistentes));
@@ -397,18 +398,31 @@
             puntosOrdenDiaArray.push({index:index+1,text:element.textContent});
         });
 
-        try{
-            const response = await fetch('https://jmfortiz.jasodev.es/webhook/f1bf71db-5673-4971-b906-5c933e42b849', {
-                method: 'POST',
-                body: formData
-            });
+        try {
+        loading.classList.remove('hidden')
+        const respuesta = await fetch('https://jmfortiz.jasodev.es/webhook/f1bf71db-5673-4971-b906-5c933e42b849', {
+            method: 'POST',
+            // @ts-ignore
+            headers: {
+                'Content-Type': archivo.files![0].type,
+                'X-File-Name': encodeURIComponent(archivo.files![0].name),
+                'X-File-Size': archivo.files![0].size,
+                'X-Upload-Timestamp': new Date().toISOString()
+            },
+            body: archivo.files![0],
+        });
 
-        const result = await response.json();
-        console.log(result);
+        if (!respuesta.ok) {
+            throw new Error(`Error HTTP: ${respuesta.status}`);
         }
-        catch(error){
-            console.log(error);
-        }
+
+        loading!.classList.add('hidden');
+        openDoc();
+
+    } catch (error) {
+        console.error('Error subiendo archivo:', error);
+        throw error;
+    }
 
         try {
         //@ts-ignore
@@ -419,7 +433,6 @@
             body: JSON.stringify({ formData: formDataObj, asistentes: asistentes, ordenDia: puntosOrdenDiaArray }),
         });
 
-        //const data = await response.json();
         if (response.ok) {
         const blob = await response.blob();
         const url = URL.createObjectURL(blob);
@@ -440,6 +453,14 @@
         alert('Hubo un error al registrar la reunión. Por favor, inténtalo de nuevo.');
         }
     });
+
+    function openDoc() {
+        const link = document.createElement('a');
+        link.href = urlDoc;
+        link.target = '_blank';
+        link.rel = 'noopener noreferrer';
+        link.click();
+    }
 
 async function fetchComunidades() {
   try {
@@ -502,7 +523,8 @@ const cuerpoTabla = document.getElementById('cuerpo-tabla') as HTMLTableSectionE
             data-propietario-index="${index}"
           >
             <option value="">Seleccionar representante</option>
-            ${pisos.map(piso => `
+            ${//@ts-ignore
+            pisos.map(piso => `
               <option value="${piso.piso} - ${piso.propietario}">${piso.piso} - ${piso.propietario}</option>
             `).join('')}
           </select>
